# CommentsApp

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
apps/comments/: forms.py  models.py  serializer.py  utils.py  views.py
apps/comments/migrations/: 0001_initial.py
apps/comments/sockets/: consumers.py  routing.py
apps/comments/templates/: base.html
apps/comments/templates/comments/: comment_form.html  comment_list.html  comments.html  index.html  js_template.html
config/: asgi.py  settings.py  urls.py
static/css/: styles.css
static/js/: scripts.js  sockets.js
